--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ environment:
   - solution_name: sem4\hw2.2\hw2.2.sln
   - solution_name: sem4\hw2.3\hw2.3.sln
   - solution_name: sem4\hw2.4\hw2.4.sln
+  - solution_name: sem4\LambdaInterpreter\LambdaInterpreter.sln
   
 build_script:
   - msbuild %solution_name%
