--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ environment:
   - solution_name: sem4\hw1.1\hw1.1.sln
   - solution_name: sem4\hw1.5\hw1.5.sln
   - solution_name: sem4\hw1.4\hw1.4.sln
+  - solution_name: sem4\hw2.1\hw2.1.sln
   - solution_name: sem4\hw2.2\hw2.2.sln
   - solution_name: sem4\hw2.3\hw2.3.sln
   - solution_name: sem4\hw2.4\hw2.4.sln
