--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ environment:
   - solution_name: sem4\hw2.3\hw2.3.sln
   - solution_name: sem4\hw2.4\hw2.4.sln
   - solution_name: sem4\LambdaInterpreter\LambdaInterpreter.sln
+  - solution_name: sem4\hw4.1\hw4.1.sln
   
 build_script:
   - msbuild %solution_name%
