--- a/sem4/hw4.1/CheckBracketSequenceCorrectness/CheckBracketSequenceCorrectness.fsproj
+++ b/sem4/hw4.1/CheckBracketSequenceCorrectness/CheckBracketSequenceCorrectness.fsproj
@@ -6,7 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Program.fs"/>
+        <Compile Include="Program.fs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FsUnit" Version="4.0.4" />
+      <PackageReference Include="NUnit" Version="3.13.1" />
+      <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     </ItemGroup>
 
 </Project>
